[package]
name = "text_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.0"
regex = "1.5.5"
chrono = "0.4.0"
unicode-width = "0.1.9"
unicode-truncate = "0.2.0"
syntect = "4.6.0"